[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://assets/font/TESTN___.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://assets/panel_score.png" type="Texture" id=3]
[ext_resource path="res://assets/animations/wiggle.tres" type="Animation" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 901.977, 702.806 ), Vector2( 903.255, 678.517 ) ]
}

[sub_resource type="GDScript" id=3]
script/source = "extends Control

signal focus

func _ready():
	for option in get_children():
		if option is Button:
			option.connect(\"focus_entered\", self, \"_on_focus\", [option])

func _on_focus(node: Control):
	emit_signal(\"focus\", node)"

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Tex:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Tex:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 180 ), Vector2( 0, 200 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("tex_panelscore:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( 710, 400 ), Vector2( 710, 350 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Tex" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -160.0
margin_bottom = -146.0
custom_fonts/font = SubResource( 1 )
text = "Awesome game TITLE"
align = 1
valign = 1
uppercase = true

[node name="tex_panelscore" type="TextureRect" parent="."]
editor/display_folded = true
visible = false
modulate = Color( 1, 1, 1, 0.243137 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 70.0
margin_top = -10.0
margin_right = 558.0
margin_bottom = 364.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="tex_panelscore"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -121.0
margin_top = -80.0
margin_right = -56.0
margin_bottom = 21.0

[node name="Label" type="Label" parent="tex_panelscore/VBoxContainer"]
margin_right = 65.0
margin_bottom = 14.0
text = "SCORE"

[node name="Label3" type="Label" parent="tex_panelscore/VBoxContainer"]
margin_top = 43.0
margin_right = 65.0
margin_bottom = 57.0
size_flags_vertical = 6

[node name="Label2" type="Label" parent="tex_panelscore/VBoxContainer"]
margin_top = 87.0
margin_right = 65.0
margin_bottom = 101.0
text = "BEST"

[node name="Cursor" type="Position2D" parent="."]
position = Vector2( 777, 710 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cursor"]
autoplay = "wiggle"
anims/poasp = SubResource( 2 )
anims/wiggle = ExtResource( 4 )

[node name="cursor" type="Label" parent="Cursor"]
margin_right = 30.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 15, 15 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = ">"

[node name="Options" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -224.5
margin_top = 167.5
margin_right = 224.5
margin_bottom = 212.5
custom_constants/vseparation = 23
columns = 3
script = SubResource( 3 )

[node name="Play" type="Button" parent="Options"]
margin_right = 147.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Play"
flat = true

[node name="Control" type="Control" parent="Options"]
margin_left = 151.0
margin_right = 298.0
margin_bottom = 45.0
size_flags_horizontal = 3

[node name="Quit" type="Button" parent="Options"]
margin_left = 302.0
margin_right = 449.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit"
flat = true

[node name="anim" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/show = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="Focus" type="AudioStreamPlayer" parent="."]

[node name="Selected" type="AudioStreamPlayer" parent="."]

[connection signal="focus" from="Options" to="." method="_on_Options_focus"]
[connection signal="pressed" from="Options/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Options/Quit" to="." method="_on_Quit_pressed"]
